# biolab-quality-journal

./: .gitignore  CLAUDE.md  README.md  SETUP.md  alembic.ini  pyproject.toml  railway.toml
app/: config.py  db.py  main.py
app/models/: __init__.py  _mixins.py  bulk_batch.py  certificate.py  customer.py  finished_batch.py  product.py  product_variant.py  specification.py
app/services/: verdict_calculator.py
migrations/: env.py
migrations/versions/: 26d8aab782aa_initial_schema.py
prototype/: README.md  auth.js  bulk-detail.html  bulk-list.html  bulk-new.html  customers.html  finished-detail.html  finished-list.html  finished-new.html  index.html  login.html  packaging-types.html  passport-view.html  passport.html  products.html  spec-card.html  styles.css  variants.html
scripts/extraction_reports/: 01_dictionaries_summary.md  02_bulk_summary.md  03_finished_summary.md  04_certificates_summary.md  _extract.py  _extract_certificates.py  _extract_finished.py  bulk_batches.csv  customers.csv  finished_batches.csv  products_rp.csv  quality_certificates.csv  specifications.csv  variants.csv
tests/: test_verdict_calculator.py
