[project]
name = "biolab-quality-journal"
version = "0.1.0"
description = "Журнал варок і генерація паспортів якості Biolab Group"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Olena Nomerovska", email = "biolabgroup.com.ua@gmail.com" }]

dependencies = [
    # web фреймворк
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-multipart>=0.0.20",  # для HTML-форм
    "jinja2>=3.1",
    # БД
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # валідація і налаштування
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # генерація PDF
    "weasyprint>=63",
    # google sheets (для одноразового імпорту і дзеркала)
    "gspread>=6.1",
    "google-auth>=2.35",
    "google-auth-oauthlib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",  # для тестів FastAPI
    "ruff>=0.7",    # лінтер
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
